added new files

--- a/index.html
+++ b/index.html
@@ -33,25 +33,34 @@
  
         </header>
         <section id="1" class="body">
-<div class="fade">
-    <pre>
-        <h1 class = "intro"> SIAS Online v3.x<p class="details1">
-            1) The MOST ADVANCED, MOST COMPLETE and FULLY INTEGRATED School Software in the Philippines!
-            2) The ONLY school software with INTEGRATED Learning Management System (LMS) in the Philippines.
-            3) The ONLY school software that is ACTIVELY MAINTAINED, DOWNLOADABLE and UPGRADEABLE-BY-DESIGN in the Philippines.
-            4) The ONLY school software which is 100% Desktop and MOBILE friendly (All User Interfaces: Admin, Trans, Tools & Reports)
-            5) The NO. 1 school software implemented at least 100 times in private and government colleges & universities!</p>
- <img src="pics/cycle.png" alt="slc" class="slc"></h1></pre>
-</div>
+                <div class="fade">
+                        <div class="c">..</div>
+                        <p class = "intro"> SIAS Online v3.x
+                            <p class="details1">
+                                <p class="details1"> 1) The MOST ADVANCED, MOST COMPLETE and FULLY INTEGRATED School Software in the Philippines!</p>
+                                <p class="details1"> 2) The ONLY school software with INTEGRATED Learning Management System (LMS) in the Philippines.</p>
+                                <p class="details1"> 3) The ONLY school software that is ACTIVELY MAINTAINED, DOWNLOADABLE and UPGRADEABLE-BY-DESIGN in the Philippines.</p>
+                                <p class="details1"> 4) The ONLY school software which is 100% Desktop and MOBILE friendly (All User Interfaces: Admin, Trans, Tools & Reports)</p>
+                                <p class="details1"> 5) The NO. 1 school software implemented at least 100 times in private and government colleges & universities!</p>
+                            </p>
+                        </P>
+                </div>
+                <div class="fade">
+                <img src="pics/cycle.png" alt="slc" class="slc">
+            </div>
     </section>
     <section id="2" class="body2">
         <div>
             <p class="clientsheader">List of Clients</p>
-
             <p class="clientqoute">“Great things in business are never done by one person; they're done by a team of people.”</p>
         </div>
         <div class="">
-			<img class="-cust-logos" src="https://orangeapps.ph/assets/images/school-logos/siena.jpeg" alt="siena.jpeg" style="width:200px; height:45px!important;">
+			<img class="cliente" src="pics/clients/dmmmsu.png" alt="dmmmmu.jpeg">
+            <img class="cliente" src="pics/clients/saintpaul.png" alt="dmmmmu.jpeg">
+            <img class="cliente" src="pics/clients/flv.png" alt="dmmmmu.jpeg">
+            <img class="cliente" src="pics/clients/isap.png" alt="dmmmmu.jpeg">
+            <img class="cliente" src="pics/clients/mncp.png" alt="dmmmmu.jpeg">
+            
 		</div>
     </section>
 
